input-sys/src/platforms/freebsd/x86/gen_1_9.rs

extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the relative delta of the unaccelerated motion vector of the"]
    #[doc = " current event. For pointer events that are not of type @ref"]
    #[doc = " LIBINPUT_EVENT_POINTER_MOTION, this function returns 0."]
    #[doc = ""]
    #[doc = " Relative unaccelerated motion deltas are raw device coordinates."]
    #[doc = " Note that these coordinates are subject to the device's native"]
    #[doc = " resolution. Touchpad coordinates represent raw device coordinates in the"]
    #[doc = " X resolution of the touchpad. See @ref motion_normalization for more"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " Any rotation applied to the device also applies to unaccelerated motion"]
    #[doc = " (see libinput_device_config_rotation_set_angle())."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION."]
    #[doc = ""]
    #[doc = " @return The unaccelerated relative y movement since the last event"]
    pub fn libinput_event_pointer_get_dy_unaccelerated(event: *mut libinput_event_pointer) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the current absolute x coordinate of the pointer event, in mm from"]
    #[doc = " the top left corner of the device. To get the corresponding output screen"]
    #[doc = " coordinate, use libinput_event_pointer_get_absolute_x_transformed()."]
    #[doc = ""]
    #[doc = " For pointer events that are not of type"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE."]
    #[doc = ""]
    #[doc = " @return The current absolute x coordinate"]
    pub fn libinput_event_pointer_get_absolute_x(event: *mut libinput_event_pointer) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the current absolute y coordinate of the pointer event, in mm from"]
    #[doc = " the top left corner of the device. To get the corresponding output screen"]
    #[doc = " coordinate, use libinput_event_pointer_get_absolute_y_transformed()."]
    #[doc = ""]
    #[doc = " For pointer events that are not of type"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE."]
    #[doc = ""]
    #[doc = " @return The current absolute y coordinate"]
    pub fn libinput_event_pointer_get_absolute_y(event: *mut libinput_event_pointer) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the current absolute x coordinate of the pointer event, transformed to"]
    #[doc = " screen coordinates."]
    #[doc = ""]
    #[doc = " For pointer events that are not of type"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE, the return value of this"]
    #[doc = " function is undefined."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE."]
    #[doc = ""]
    #[doc = " @param event The libinput pointer event"]
    #[doc = " @param width The current output screen width"]
    #[doc = " @return The current absolute x coordinate transformed to a screen coordinate"]
    pub fn libinput_event_pointer_get_absolute_x_transformed(
        event: *mut libinput_event_pointer,
        width: u32,
    ) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the current absolute y coordinate of the pointer event, transformed to"]
    #[doc = " screen coordinates."]
    #[doc = ""]
    #[doc = " For pointer events that are not of type"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE, the return value of this function is"]
    #[doc = " undefined."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE."]
    #[doc = ""]
    #[doc = " @param event The libinput pointer event"]
    #[doc = " @param height The current output screen height"]
    #[doc = " @return The current absolute y coordinate transformed to a screen coordinate"]
    pub fn libinput_event_pointer_get_absolute_y_transformed(
        event: *mut libinput_event_pointer,
        height: u32,
    ) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the button that triggered this event."]
    #[doc = " For pointer events that are not of type @ref"]
    #[doc = " LIBINPUT_EVENT_POINTER_BUTTON, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_BUTTON."]
    #[doc = ""]
    #[doc = " @return The button triggering this event"]
    pub fn libinput_event_pointer_get_button(event: *mut libinput_event_pointer) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the button state that triggered this event."]
    #[doc = " For pointer events that are not of type @ref"]
    #[doc = " LIBINPUT_EVENT_POINTER_BUTTON, this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_BUTTON."]
    #[doc = ""]
    #[doc = " @return The button state triggering this event"]
    pub fn libinput_event_pointer_get_button_state(
        event: *mut libinput_event_pointer,
    ) -> libinput_button_state;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " For the button of a @ref LIBINPUT_EVENT_POINTER_BUTTON event, return the"]
    #[doc = " total number of buttons pressed on all devices on the associated seat"]
    #[doc = " after the event was triggered."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_BUTTON. For other events, this function"]
    #[doc = " returns 0."]
    #[doc = ""]
    #[doc = " @return The seat wide pressed button count for the key of this event"]
    pub fn libinput_event_pointer_get_seat_button_count(event: *mut libinput_event_pointer) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Check if the event has a valid value for the given axis."]
    #[doc = ""]
    #[doc = " If this function returns non-zero for an axis and"]
    #[doc = " libinput_event_pointer_get_axis_value() returns a value of 0, the event"]
    #[doc = " is a scroll stop event."]
    #[doc = ""]
    #[doc = " For pointer events that are not of type @ref LIBINPUT_EVENT_POINTER_AXIS,"]
    #[doc = " this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_AXIS."]
    #[doc = ""]
    #[doc = " @return Non-zero if this event contains a value for this axis"]
    pub fn libinput_event_pointer_has_axis(
        event: *mut libinput_event_pointer,
        axis: libinput_pointer_axis,
    ) -> ::libc::c_int;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the axis value of the given axis. The interpretation of the value"]
    #[doc = " depends on the axis. For the two scrolling axes"]
    #[doc = " @ref LIBINPUT_POINTER_AXIS_SCROLL_VERTICAL and"]
    #[doc = " @ref LIBINPUT_POINTER_AXIS_SCROLL_HORIZONTAL, the value of the event is in"]
    #[doc = " relative scroll units, with the positive direction being down or right,"]
    #[doc = " respectively. For the interpretation of the value, see"]
    #[doc = " libinput_event_pointer_get_axis_source()."]
    #[doc = ""]
    #[doc = " If libinput_event_pointer_has_axis() returns 0 for an axis, this function"]
    #[doc = " returns 0 for that axis."]
    #[doc = ""]
    #[doc = " For pointer events that are not of type @ref LIBINPUT_EVENT_POINTER_AXIS,"]
    #[doc = " this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_AXIS."]
    #[doc = ""]
    #[doc = " @return The axis value of this event"]
    #[doc = ""]
    #[doc = " @see libinput_event_pointer_get_axis_value_discrete"]
    pub fn libinput_event_pointer_get_axis_value(
        event: *mut libinput_event_pointer,
        axis: libinput_pointer_axis,
    ) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the source for a given axis event. Axis events (scroll events) can"]
    #[doc = " be caused by a hardware item such as a scroll wheel or emulated from"]
    #[doc = " other input sources, such as two-finger or edge scrolling on a"]
    #[doc = " touchpad."]
    #[doc = ""]
    #[doc = " If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_FINGER, libinput"]
    #[doc = " guarantees that a scroll sequence is terminated with a scroll value of 0."]
    #[doc = " A caller may use this information to decide on whether kinetic scrolling"]
    #[doc = " should be triggered on this scroll sequence."]
    #[doc = " The coordinate system is identical to the cursor movement, i.e. a"]
    #[doc = " scroll value of 1 represents the equivalent relative motion of 1."]
    #[doc = ""]
    #[doc = " If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_WHEEL, no terminating"]
    #[doc = " event is guaranteed (though it may happen)."]
    #[doc = " Scrolling is in discrete steps, the value is the angle the wheel moved"]
    #[doc = " in degrees. The default is 15 degrees per wheel click, but some mice may"]
    #[doc = " have differently grained wheels. It is up to the caller how to interpret"]
    #[doc = " such different step sizes."]
    #[doc = ""]
    #[doc = " If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_CONTINUOUS, no"]
    #[doc = " terminating event is guaranteed (though it may happen)."]
    #[doc = " The coordinate system is identical to the cursor movement, i.e. a"]
    #[doc = " scroll value of 1 represents the equivalent relative motion of 1."]
    #[doc = ""]
    #[doc = " If the source is @ref LIBINPUT_POINTER_AXIS_SOURCE_WHEEL_TILT, no"]
    #[doc = " terminating event is guaranteed (though it may happen)."]
    #[doc = " Scrolling is in discrete steps and there is no physical equivalent for"]
    #[doc = " the value returned here. For backwards compatibility, the value returned"]
    #[doc = " by this function is identical to a single mouse wheel rotation by this"]
    #[doc = " device (see the documentation for @ref LIBINPUT_POINTER_AXIS_SOURCE_WHEEL"]
    #[doc = " above). Callers should not use this value but instead exclusively refer"]
    #[doc = " to the value returned by libinput_event_pointer_get_axis_value_discrete()."]
    #[doc = ""]
    #[doc = " For pointer events that are not of type @ref LIBINPUT_EVENT_POINTER_AXIS,"]
    #[doc = " this function returns 0."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_AXIS."]
    #[doc = ""]
    #[doc = " @return The source for this axis event"]
    pub fn libinput_event_pointer_get_axis_source(
        event: *mut libinput_event_pointer,
    ) -> libinput_pointer_axis_source;
}
